# STL

./: .gitignore  .travis.yml  CMakeLists.txt  FORMATTING.md  LICENSE.md  README.md
src/basop/test_framework/: CMakeLists.txt  README.md
src/bs1770demo/: CMakeLists.txt  README.md  bs1770demo.c
src/bs1770demo/supplementary_info/: bs1770.m  generate_test_signal.m  run_conformance.bash  test_bs1770.m
src/bs1770demo/test_data/: bs1770.m  generate_test_signal.m  sine997_0dBFS.26LKFS.pcm  sine997_0dBFS.pcm  sine_noise_test.16LKFS.000L11.pcm  sine_noise_test.16LKFS.11L000.pcm  sine_noise_test.pcm  sine_ramp.26LKFS.pcm  sine_ramp.26LKFSrms.pcm  sine_ramp.pcm
src/eid/: CMakeLists.txt  README.md  bs-stats.c  cvt-head.c  dec-patt.c  eid-ev.c  eid-int.c  eid-xor.c  eid.c  eid.h  eid8k.c  eid_io.c  eid_io.h  eiddemo.c  ep-stats.c  ep_histogram.h  g729e_convert_synch.c  gen-patt.c  gen_rate_profile.c  softbit.c  softbit.h
src/eid/test_data/: ascii-bs.awk  ascii-fr.ref  bgendian.crc  dummy.bs  ltendian.crc  patb1pct.ref  patb3pct.ref  patb5pct.ref  patf10-2.ref  patr10-2.ref  zero-crc.txt  zero.ser
src/esdru/: CMakeLists.txt  README.md  esdru.c
src/esdru/supplementary_info/: esdru.m  test_esdru.m
src/esdru/test_data/: es_el.double  esdru.m  stereo_test.0.2.pcm  stereo_test.pcm  test_esdru.m
src/fir/: CMakeLists.txt  README.md  TEST.md  filter.c  fir-LP.c  fir-dsm.c  fir-flat.c  fir-hirs.c  fir-irs.c  fir-lib.c  fir-msin.c  fir-pso.c  fir-tia.c  fir-wb.c  firdemo.c  firflt.c  firflt.h  fltresp.c
src/fir/test_data/: rxmirs16.ref  rxmirs8.ref  test-asy.ref  test-cas.ref  test-fir.rme  test-pso.ref  test-ref.sta  test-sac.ref  test.src  test001.ref  test002.ref  test003.ref  test004.ref  test005.ref  test008.ref  test009.ref  test012.ref  test014.ref  test015.ref  test017.ref  test018.ref  test019.ref  test020.ref  test022.ref  test024.ref  test5kbp.ref  testfla1.ref  testmsin.ref  testp341.ref  testpcm1.ref  testpcmu.ref
src/freqresp/: CMakeLists.txt  bmp_utils.c  bmp_utils.h  export.c  export.h  fft.c  fft.h  freqresp.c
src/freqresp/test_data/: asciiOut.ref  bmpOut.ref  input.src
src/g711/: CMakeLists.txt  README.md  g711.c  g711.h  g711demo.c  shiftbit.c
src/g711/test_data/: sweep-r.a-a  sweep-r.rea  sweep-r.reu  sweep-r.u  sweep-r.u-u  sweep.src
src/g711iplc/: CMakeLists.txt  LICENSE.md  README.md  asc2g192.c  error.c  error.h  g711iplc.c  lowcfe.c  lowcfe.h  plcferio.c  plcferio.h
src/g711iplc/cpp_code/: g711iplc.cc  lowcfe.cc  lowcfe.h
src/g711iplc/test_data/: f2.le  f2_10.raw  f2_10_2.raw  f2_10_2_c.raw  f2_10_2m.raw  f2_10_c.raw  f2_10m.raw  fe10.g192  fe10_2.g192
src/g722/: CMakeLists.txt  README.md  decg722.c  encg722.c  funcg722.c  funcg722.h  g722.c  g722.h  g722_com.h  g722demo.c  operg722.c  operg722.h  tstcg722.c  tstdg722.c
src/g722/test_data/: codsp.cod  codspw.cod
src/g726/: CMakeLists.txt  README.md  cvt_h_b.c  g726.c  g726.h  g726demo.c  vbr-g726.c
src/g726/test_data/: hn16fm.i  hn24fa.i  hn24fm.i  hn32fa.i  hn32fm.i  hn40fa.i  hn40fm.i  hv24fa.i  hv24fm.i  hv32fa.i  hv32fm.i  hv40fa.i  hv40fm.i  i40  i_ini_16.m  i_ini_24.m  i_ini_32.m  i_ini_40.m  pcm_init.m  rn24fa.i  rn24fm.i  rn32fa.i  rn32fm.i  rn40fa.i  rn40fm.i  rv16fa.i  rv16fm.i  rv24fa.i  rv24fm.i  rv32fa.i  rv32fm.i  rv40fa.i  rv40fm.i  voicevbr.arf  voicevbr.lrf  voicevbr.urf  voicvbra.tst  voicvbrl.tst  voicvbru.tst
src/g727/: CMakeLists.txt  README.md  TEST.md  discard.c  g727.c  g727.h  g727demo.c
src/g727/test_data/: hn22_a.i  hn32_a.i  hn32_m.i  hn33_a.i  hn33_m.i  hn42_a.i  hn42_m.i  hn43_a.i  hn43_m.i  hn44_a.i  hn44_m.i  hn52_a.i  hn52_m.i  hn53_a.i  hn53_m.i  hn54_a.i  hn54_m.i  hv22_a.i  hv22_m.i  hv32_a.i  hv32_m.i  hv33_a.i  hv33_m.i  hv42_a.i  hv42_m.i  hv43_a.i  hv43_m.i  hv44_a.i  hv44_m.i  hv52_a.i  hv52_m.i  hv53_a.i  hv53_m.i  hv54_a.i  hv54_m.i  i16  i24  i32  i_init22.m  i_init32.m  (+95 more)
src/g728/g728fixed/: CMakeLists.txt  README.md  g728fp.c  g728fp.h  g728fpacor.c  g728fpblk36.c  g728fpcpy.c  (+29 more)
src/iir/: CMakeLists.txt  README.md  c712demo.c  cascg712.c  cirsdemo.c  iir-dir.c  iir-flat.c  iir-g712.c  iir-irs.c  iir-lib.c  iirflt.c  iirflt.h  pcmdemo.c
src/is54/: CMakeLists.txt  LICENSE.md  README.md  b_con.c  calcp.c  cunpack0.c  decorr.c  excite.c  filt4.c  filters.c  flatv.c  fspace.c  g_quant.c  getp.c  init.c  interp.c  k_table.i  lag.c  makec.c  p_ex.c  pconv.c  putc.c  r_sub.c  r_sub.h  rs_rr.c  t_sub.c  t_sub.h  v_con.c  v_srch.c  vparams.h  vselp.c  vselp.h  wsnr.c
src/mnru/: CMakeLists.txt  Copyright notice MNRU-P.50.txt  README.md  calc-snr.c  filtering_coeffs.h  filtering_routines.h  mnru.c  mnru.h  mnrudemo.c  p50fbmnru.c  snr.c
src/p50fbmnru/: Bg_mnr70_src.c  CMakeLists.txt  bg_mnr70_src.c  filtering_coeffs.h  filtering_routines.c  string_ext.c  string_ext.h  your_filtering_routines.c  your_filtering_routines.h
src/reverb/: CMakeLists.txt  README.md  reverb-lib.c  reverb-lib.h  reverb.c
src/rpeltp/: CMakeLists.txt  LICENSE.md  README.md  add.c  add_test.c  code.c  config.h  debug.c  decode.c  gsm.h  gsm_crea.c  gsm_deco.c  gsm_dest.c  gsm_enco.c  gsm_expl.c  gsm_impl.c  gsm_opti.c  gsm_prin.c  long_ter.c  lpc.c  preproce.c  private.h  proto.h  rpe.c  rpedemo.c  rpeltp.c  rpeltp.h  short_te.c  table.c  unproto.h
src/stereoop/: CMakeLists.txt  README.md  stereoop.c
src/sv56/: CMakeLists.txt  README.md  actlevel.c  sv-p56.c  sv-p56.h  sv56demo.c
src/truncate/: CMakeLists.txt  README.md  trunc-lib.c  trunc-lib.h  truncate.c
src/unsup/: CMakeLists.txt  README.md  asc2bin.c  astrip.c  bin2asc.c  chr2sh.c  compfile.c  concat.c  dumpfile.c  endian.c  fdelay.c  getcrc32.c  measure.c  oper.c  pshar.c  sb.c  sh2chr.c  sig-snr.h  sine.c  sub-add.c  xdecode.c  xencode.c
src/utl/: CMakeLists.txt  README.md  scaldemo.c  signal-diff.c  spdemo.c  ugst-utl.c  ugst-utl.h  ugstdemo.h
src/wmc_tool/: .gitignore  CMakeLists.txt  HISTORY.md  README.md  c_parser.cpp  c_parser.h  constants.h  mem_analysis.py  output.cpp  output.h  parsing_defs.h  requirements.txt  text_utils.cpp  text_utils.h  wmc_auto_c.txt  wmc_auto_h.txt  wmc_tool.cpp  wmc_tool.h
(+668 files in other folders)
