cmake_minimum_required(VERSION 3.1)
project(ITU-T_STL2009)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

#Platform-specific settings
if("${CMAKE_C_COMPILER_ID}" STREQUAL "MSVC")
  message(DEBUG "libm: <<MSVC>> provides <<libm>> by default and thus __cannot_ link against <<libm>>.")
  set(M_LIBRARY "")
else()
  set(M_LIBRARY "m")
endif()

#Testing
enable_testing()
add_custom_target(test-verbose COMMAND ${CMAKE_CTEST_COMMAND} --verbose)

#Source folders
add_subdirectory(src/basop/test_framework)
add_subdirectory(src/basop/flc)
add_subdirectory(src/eid)
add_subdirectory(src/fir)
add_subdirectory(src/freqresp)
add_subdirectory(src/g711)
add_subdirectory(src/g711iplc)
add_subdirectory(src/g722)
add_subdirectory(src/g726)
add_subdirectory(src/g727)
add_subdirectory(src/g728/g728fixed)
add_subdirectory(src/g728/g728float)
add_subdirectory(src/iir)
add_subdirectory(src/is54)
add_subdirectory(src/mnru)
add_subdirectory(src/reverb)
add_subdirectory(src/rpeltp)
add_subdirectory(src/stereoop)
add_subdirectory(src/sv56)
add_subdirectory(src/truncate)
add_subdirectory(src/unsup)
add_subdirectory(src/unsup/g728-vt)
add_subdirectory(src/utl)
